# hypercute

./: README.md  README.rst  cookiecutter.json  requirements.txt
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .editorconfig  .gitignore  ChangeLog.rst  README.rst  pyproject.toml  tox.ini  {% if cookiecutter.license == 'Apache-2.0' -%} LICENSE.rst {%- endif %}  {% if cookiecutter.license == 'GPL-3.0' -%} LICENSE.rst {%- endif %}  {% if cookiecutter.license == 'MIT' -%} LICENSE.rst {%- endif %}
{{cookiecutter.project_slug}}/dev-requirements.d/: docs.txt  linting.txt  testing.txt
{{cookiecutter.project_slug}}/docs/source/: changes.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/docs/source/examples/: .gitkeep
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py
{{cookiecutter.project_slug}}/tests/: test_main.py
